# DiscordBotCLIShell

./: README.md  _bot.py  main.py  pyproject.toml
Shell/: navigator.py  shell.py
